--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=RoleBaseAuthorization
 
 server.port=9095
 spring.datasource.url=jdbc:mysql://localhost:3306/rolebaseauthetication
-spring.datasource.username=root
-spring.datasource.password=myroot
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
